--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,11 +107,50 @@ body.block-editor-page .media-modal-content .media-frame select.attachment-filte
 	color: #BBBBBB;
 }
 
+.selectize-input [data-value] {
+	position: relative;
+	padding-right: 24px !important;
+}
+
+.selectize-input .remove {
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 17px;
+	text-align: center;
+	font-weight: 700;
+	font-size: 12px;
+	color: inherit;
+	text-decoration: none;
+	vertical-align: middle;
+	font-family: serif;
+	padding: 2px 0 0;
+	border-left: 1px solid #d0d0d0;
+	-webkit-border-radius: 0 2px 2px 0;
+	-moz-border-radius: 0 2px 2px 0;
+	border-radius: 0 2px 2px 0;
+	box-sizing: border-box;
+}
+
+.selectize-input .remove:hover {
+	background-color: rgba(0,0,0,.05);
+}
+
 .selectize-dropdown {
 	z-index: 1000000;
 }
 
-.upload-php .selectize-dropdown {
-	margin-top: -33px;
+.selectize-dropdown [data-value] {
+	padding: 5px 8px;
 }
+
+.selectize-dropdown .searchhint {
+	color: rgba(48,48,48,.5);
+}
+
+/* .upload-php .selectize-dropdown {
+	margin-top: -33px;
+} */
 
